--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "swagger-autogen": "^2.23.7"
   },
   "dependencies": {
+    "@upstash/redis": "^1.34.4",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -43,6 +45,7 @@
     "mongoose": "^8.9.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^4.7.0",
     "swagger-ui-express": "^5.0.1"
   }
 }
