--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+# Ignore node_modules
 node_modules
+
+# Ignore .env file
 .env
+
+# Ignore local SSL certificates
+localhost-key.pem
+localhost.pem
